# Epoll-Client-Server

./: CMakeLists.txt  Client.cpp  README.md  Server.cpp
.cache/clangd/index/: Client.cpp.7F000A4A77A08502.idx  Logger.h.33ECF335749BD05C.idx  Logger.h.82AB5CA18CCE76FE.idx  Main.cpp.01BE43C8A167F831.idx  RxMsg.cpp.9A8F0661D71AAEAD.idx  RxMsg.h.A5734DECF72A9E30.idx  Server.cpp.A7FA8F74B483ECA8.idx  TxBuffer.cpp.EE62B38EDCE5844A.idx  TxBuffer.h.CE0D3693EB5F112A.idx  TxMsg.cpp.0B5C82104CF42112.idx  TxMsg.h.E411F216D2DCFBE0.idx  client.cpp.793D1C7801746E57.idx  server.cpp.80A48BB76E2CDEA2.idx
include/: EpollTcpClient.h  EpollTcpServer.h  EventChannel.h  Logger.h  RxMsg.h  TxMsg.h  Utils.h
src/: EpollTcpClient.cpp  EpollTcpServer.cpp  EventChannel.cpp  RxMsg.cpp  TxBuffer.cpp  TxMsg.cpp  Utils.cpp
